--- a/angular.json
+++ b/angular.json
@@ -31,6 +31,7 @@
               "src/styles.scss"
             ],
             "scripts": [
+              "node_modules/jwt-decode/build/jwt-decode.min.js",
               "node_modules/lodash/lodash.min.js"
             ]
           },
